--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -143,27 +143,35 @@
     <ClInclude Include="BuddyHeapAllocator.h" />
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="BufferDesc.h" />
-    <ClInclude Include="LinearAllocator.h" />
+    <ClInclude Include="LinearBufferAllocator.h" />
     <ClInclude Include="PoolDescriptorAllocator.h" />
     <ClInclude Include="GpuDevice.h" />
     <ClInclude Include="PoolCommandListAllocator.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="RenderScene.h" />
     <ClInclude Include="ResourceAllocator.h" />
     <ClInclude Include="RingFrameTracker.h" />
     <ClInclude Include="SegregatedPoolHeapAllocator.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureDesc.h" />
+    <ClInclude Include="Uploader.h" />
+    <ClInclude Include="UploadList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuddyHeapAllocator.cpp" />
     <ClCompile Include="Buffer.cpp" />
-    <ClCompile Include="LinearAllocator.cpp" />
+    <ClCompile Include="LinearBufferAllocator.cpp" />
     <ClCompile Include="PoolDescriptorAllocator.cpp" />
     <ClCompile Include="GpuDevice.cpp" />
     <ClCompile Include="PoolCommandListAllocator.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="RenderScene.cpp" />
     <ClCompile Include="ResourceAllocator.cpp" />
     <ClCompile Include="RingFrameTracker.cpp" />
     <ClCompile Include="SegregatedPoolHeapAllocator.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Uploader.cpp" />
+    <ClCompile Include="UploadList.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
