--- a/GHL/GHL.vcxproj
+++ b/GHL/GHL.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="CommandAllocator.h" />
     <ClInclude Include="CommandList.h" />
+    <ClInclude Include="d3dx12.h" />
     <ClInclude Include="PipelineState.h" />
     <ClInclude Include="CommandQueue.h" />
     <ClInclude Include="DWParam.h" />
