--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -144,14 +144,16 @@
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="BufferDesc.h" />
     <ClInclude Include="LinearBufferAllocator.h" />
+    <ClInclude Include="PipelineStateAllocator.h" />
     <ClInclude Include="PoolDescriptorAllocator.h" />
     <ClInclude Include="GpuDevice.h" />
     <ClInclude Include="PoolCommandListAllocator.h" />
     <ClInclude Include="Renderer.h" />
-    <ClInclude Include="RenderScene.h" />
     <ClInclude Include="ResourceAllocator.h" />
     <ClInclude Include="RingFrameTracker.h" />
+    <ClInclude Include="RootSignatureAllocator.h" />
     <ClInclude Include="SegregatedPoolHeapAllocator.h" />
+    <ClInclude Include="ShaderManger.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureDesc.h" />
     <ClInclude Include="Uploader.h" />
@@ -161,14 +163,16 @@
     <ClCompile Include="BuddyHeapAllocator.cpp" />
     <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="LinearBufferAllocator.cpp" />
+    <ClCompile Include="PipelineStateAllocator.cpp" />
     <ClCompile Include="PoolDescriptorAllocator.cpp" />
     <ClCompile Include="GpuDevice.cpp" />
     <ClCompile Include="PoolCommandListAllocator.cpp" />
     <ClCompile Include="Renderer.cpp" />
-    <ClCompile Include="RenderScene.cpp" />
     <ClCompile Include="ResourceAllocator.cpp" />
     <ClCompile Include="RingFrameTracker.cpp" />
+    <ClCompile Include="RootSignatureAllocator.cpp" />
     <ClCompile Include="SegregatedPoolHeapAllocator.cpp" />
+    <ClCompile Include="ShaderManger.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Uploader.cpp" />
     <ClCompile Include="UploadList.cpp" />
