--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -145,14 +145,18 @@
     <ClInclude Include="BufferDesc.h" />
     <ClInclude Include="GPUProfiler.h" />
     <ClInclude Include="LinearBufferAllocator.h" />
-    <ClInclude Include="PipelineStateManger.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="PoolDescriptorAllocator.h" />
     <ClInclude Include="GpuDevice.h" />
     <ClInclude Include="PoolCommandListAllocator.h" />
-    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="RenderEngine.h" />
+    <ClInclude Include="RenderGraph.h" />
+    <ClInclude Include="RenderGraphBuilder.h" />
+    <ClInclude Include="RenderPass.h" />
     <ClInclude Include="ResourceAllocator.h" />
     <ClInclude Include="RingFrameTracker.h" />
     <ClInclude Include="SegregatedPoolHeapAllocator.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManger.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureDesc.h" />
@@ -165,14 +169,18 @@
     <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="GPUProfiler.cpp" />
     <ClCompile Include="LinearBufferAllocator.cpp" />
-    <ClCompile Include="PipelineStateManger.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="PoolDescriptorAllocator.cpp" />
     <ClCompile Include="GpuDevice.cpp" />
     <ClCompile Include="PoolCommandListAllocator.cpp" />
-    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="RenderEngine.cpp" />
+    <ClCompile Include="RenderGraph.cpp" />
+    <ClCompile Include="RenderGraphBuilder.cpp" />
+    <ClCompile Include="RenderPass.cpp" />
     <ClCompile Include="ResourceAllocator.cpp" />
     <ClCompile Include="RingFrameTracker.cpp" />
     <ClCompile Include="SegregatedPoolHeapAllocator.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManger.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TileUpdateManger.cpp" />
