--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -152,7 +152,8 @@
     <ClInclude Include="RenderEngine.h" />
     <ClInclude Include="RenderGraph.h" />
     <ClInclude Include="RenderGraphBuilder.h" />
-    <ClInclude Include="RenderPass.h" />
+    <ClInclude Include="RenderGraphPass.h" />
+    <ClInclude Include="RenderGraphResource.h" />
     <ClInclude Include="ResourceAllocator.h" />
     <ClInclude Include="RingFrameTracker.h" />
     <ClInclude Include="SegregatedPoolHeapAllocator.h" />
@@ -176,7 +177,7 @@
     <ClCompile Include="RenderEngine.cpp" />
     <ClCompile Include="RenderGraph.cpp" />
     <ClCompile Include="RenderGraphBuilder.cpp" />
-    <ClCompile Include="RenderPass.cpp" />
+    <ClCompile Include="RenderGraphPass.cpp" />
     <ClCompile Include="ResourceAllocator.cpp" />
     <ClCompile Include="RingFrameTracker.cpp" />
     <ClCompile Include="SegregatedPoolHeapAllocator.cpp" />
@@ -186,6 +187,9 @@
     <ClCompile Include="TileUpdateManger.cpp" />
     <ClCompile Include="Uploader.cpp" />
     <ClCompile Include="UploadList.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="RenderGraph.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
