--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LibraryPath>..\DXDance\ThirdParty\lib\DXC;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -110,6 +113,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>dxcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,7 +151,6 @@
     <ClInclude Include="LinearBufferAllocator.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="PoolDescriptorAllocator.h" />
-    <ClInclude Include="GpuDevice.h" />
     <ClInclude Include="PoolCommandListAllocator.h" />
     <ClInclude Include="RenderEngine.h" />
     <ClInclude Include="RenderGraph.h" />
@@ -172,9 +175,9 @@
     <ClCompile Include="LinearBufferAllocator.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="PoolDescriptorAllocator.cpp" />
-    <ClCompile Include="GpuDevice.cpp" />
     <ClCompile Include="PoolCommandListAllocator.cpp" />
     <ClCompile Include="RenderEngine.cpp" />
+    <ClCompile Include="RendererTest.cpp" />
     <ClCompile Include="RenderGraph.cpp" />
     <ClCompile Include="RenderGraphBuilder.cpp" />
     <ClCompile Include="RenderGraphPass.cpp" />
