--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="RenderGraphResourceProperties.h">
       <Filter>头文件\Renderer\RenderGraph</Filter>
     </ClInclude>
+    <ClInclude Include="ResourceStateTracker.h">
+      <Filter>头文件\Renderer\RenderGraph</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuddyHeapAllocator.cpp">
@@ -222,6 +225,9 @@
       <Filter>源文件\Renderer\RenderGraph</Filter>
     </ClCompile>
     <ClCompile Include="RenderGraphResourceID.cpp">
+      <Filter>源文件\Renderer\RenderGraph</Filter>
+    </ClCompile>
+    <ClCompile Include="ResourceStateTracker.cpp">
       <Filter>源文件\Renderer\RenderGraph</Filter>
     </ClCompile>
   </ItemGroup>
