--- a/Tools/Tools.vcxproj.filters
+++ b/Tools/Tools.vcxproj.filters
@@ -79,6 +79,12 @@
     <Filter Include="头文件\VisitorHelper">
       <UniqueIdentifier>{32eb03da-222b-4c05-a9fd-07136f0aba1e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\TaskSystem">
+      <UniqueIdentifier>{2d3affb1-bf28-463e-8234-138540032ffc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\TaskSystem">
+      <UniqueIdentifier>{3377206c-b6af-4d04-8af7-4f7bea932799}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="Event.inl">
@@ -164,6 +170,15 @@
     <ClInclude Include="VisitorHelper.h">
       <Filter>头文件\VisitorHelper</Filter>
     </ClInclude>
+    <ClInclude Include="TaskProxy.h">
+      <Filter>头文件\TaskSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskSystem.h">
+      <Filter>头文件\TaskSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadPool.h">
+      <Filter>头文件\TaskSystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="StrUtil.cpp">
@@ -195,6 +210,15 @@
     </ClCompile>
     <ClCompile Include="Ring.cpp">
       <Filter>源文件\Container</Filter>
+    </ClCompile>
+    <ClCompile Include="TaskProxy.cpp">
+      <Filter>源文件\TaskSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="TaskSystem.cpp">
+      <Filter>源文件\TaskSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreadPool.cpp">
+      <Filter>源文件\TaskSystem</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
