--- a/Shader/Shader.vcxproj
+++ b/Shader/Shader.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{caf78c56-cae7-43c5-aace-fb6489240994}</ProjectGuid>
-    <RootNamespace>Renderer</RootNamespace>
+    <ProjectGuid>{d22dc974-7c5f-42ce-8933-5f58b72cb8ba}</ProjectGuid>
+    <RootNamespace>Shader</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,9 +70,6 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LibraryPath>..\DXDance\ThirdParty\lib\DXC;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -107,13 +104,10 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>dxcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,90 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GHL\GHL.vcxproj">
-      <Project>{ee8df10c-9bea-4b8d-9921-68e186f813cf}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Math\Math.vcxproj">
-      <Project>{49ef35ec-4e53-4b6e-b6aa-7e0fc4239c11}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Tools\Tools.vcxproj">
-      <Project>{174efee4-0e95-429f-bcde-8a04e5ecbee8}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Windows\Windows.vcxproj">
-      <Project>{d9babb68-acee-428f-befe-c0e72feb0779}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="BackBufferPass.h" />
-    <ClInclude Include="BuddyHeapAllocator.h" />
-    <ClInclude Include="Buffer.h" />
-    <ClInclude Include="DeferredLightPass.h" />
-    <ClInclude Include="GBufferPass.h" />
-    <ClInclude Include="GPUProfiler.h" />
-    <ClInclude Include="LinearBufferAllocator.h" />
-    <ClInclude Include="Material.h" />
-    <ClInclude Include="MemoryAliasingHelper.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="RootConstantsPerFrame.h" />
-    <ClInclude Include="PoolDescriptorAllocator.h" />
-    <ClInclude Include="PoolCommandListAllocator.h" />
-    <ClInclude Include="RenderEngine.h" />
-    <ClInclude Include="RenderGraph.h" />
-    <ClInclude Include="RenderGraphBuilder.h" />
-    <ClInclude Include="RenderGraphItem.h" />
-    <ClInclude Include="RenderGraphPass.h" />
-    <ClInclude Include="RenderGraphResource.h" />
-    <ClInclude Include="RenderGraphResourceID.h" />
-    <ClInclude Include="RenderGraphResourceProperties.h" />
-    <ClInclude Include="RenderGraphResourceStorage.h" />
-    <ClInclude Include="ResourceAllocator.h" />
-    <ClInclude Include="ResourceFormat.h" />
-    <ClInclude Include="ResourceStateTracker.h" />
-    <ClInclude Include="RingFrameTracker.h" />
-    <ClInclude Include="SegregatedPoolHeapAllocator.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="ShaderManger.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="TileUpdateManger.h" />
-    <ClInclude Include="Uploader.h" />
-    <ClInclude Include="UploadList.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="BackBufferPass.cpp" />
-    <ClCompile Include="BuddyHeapAllocator.cpp" />
-    <ClCompile Include="Buffer.cpp" />
-    <ClCompile Include="DeferredLightPass.cpp" />
-    <ClCompile Include="GBufferPass.cpp" />
-    <ClCompile Include="GPUProfiler.cpp" />
-    <ClCompile Include="LinearBufferAllocator.cpp" />
-    <ClCompile Include="Material.cpp" />
-    <ClCompile Include="MemoryAliasingHelper.cpp" />
-    <ClCompile Include="PoolDescriptorAllocator.cpp" />
-    <ClCompile Include="PoolCommandListAllocator.cpp" />
-    <ClCompile Include="RenderEngine.cpp" />
-    <ClCompile Include="RendererTest.cpp" />
-    <ClCompile Include="RenderGraph.cpp" />
-    <ClCompile Include="RenderGraphBuilder.cpp" />
-    <ClCompile Include="RenderGraphItem.cpp" />
-    <ClCompile Include="RenderGraphPass.cpp" />
-    <ClCompile Include="RenderGraphResource.cpp" />
-    <ClCompile Include="RenderGraphResourceID.cpp" />
-    <ClCompile Include="RenderGraphResourceStorage.cpp" />
-    <ClCompile Include="Resource.cpp" />
-    <ClCompile Include="ResourceAllocator.cpp" />
-    <ClCompile Include="ResourceFormat.cpp" />
-    <ClCompile Include="ResourceStateTracker.cpp" />
-    <ClCompile Include="RingFrameTracker.cpp" />
-    <ClCompile Include="SegregatedPoolHeapAllocator.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="ShaderManger.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="TileUpdateManger.cpp" />
-    <ClCompile Include="Uploader.cpp" />
-    <ClCompile Include="UploadList.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="RenderGraph.inl" />
+    <None Include="BaseEngineLayout.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
